# discord-now-playing

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: discord-playing.yml
discord_now_playing/: main.py
discord_now_playing.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_discord_now_playing.py
