[tool.poetry]
name = "discord-now-playing"
version = "0.1.0"
description = ""
authors = ["Nikolas Pitsillos <npitsillos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.0"
"discord.py" = "^1.4.1"
uvicorn = "^0.11.8"
requests = "^2.24.0"
python-dotenv = "^0.14.0"

[tool.poetry.scripts]
game-playing = "discord_now_playing.main:launch"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
